Fixed missalignment as well as added dark tone to header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,24 +45,31 @@ header {
     grid-template-rows: 55% auto;
 }
 
-header>img {
+header div#logo {
+    background-color: #181A1B;
+}
+
+header img {
     grid-row: 1;
 }
 
-header>nav {
+header nav {
     grid-row: 2;
     background-color: #C6A85F;
 }
 
-header>nav>ul {
+header nav ul {
     list-style: none;
     display: grid;
     grid-template-columns: auto auto auto auto auto;
     justify-items: center;
     align-items: center;
+    padding: 0;
+    margin: auto;
+    height: 100%;
 }
 
-header>nav>ul>li {
+header nav ul li {
     background-color: black;
     margin-right: 30px;
     width: 150px;
@@ -70,7 +77,7 @@ header>nav>ul>li {
     text-align: center;
 }
 
-header>nav>ul>li>a {
+header nav ul li a {
     text-decoration: none;
     color: white;
     display: block;
@@ -79,14 +86,14 @@ header>nav>ul>li>a {
     transition: 0.2s;
 }
 
-header>nav>ul>li>a:hover {
+header nav ul li a:hover {
     text-decoration: none;
     color: white;
     display: block;
     background-color: #CB5E56;
 }
 
-header>nav>ul>li#signin {
+header nav ul li#signin {
     grid-column: 5;
 }
 
